--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>mgExternal Test file</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="//twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-	<link rel="stylesheet" href="https://github.com/celtric/mgExternal/raw/master/mgExternal.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/celtric/mgExternal/raw/master/mgExternal.css">
 	<style>
 		body {
 			background-color: #eee;
