--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>mgExternal Test file</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="//twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="https://github.com/celtric/mgExternal/raw/master/mgExternal.css">
+	<link rel="stylesheet" href="mgExternal.css">
 	<style>
 		body {
 			background-color: #eee;
@@ -27,7 +27,7 @@
 		}
 	</style>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="https://github.com/celtric/mgExternal/raw/master/jquery.mgExternal.js"></script>
+	<script src="jquery.mgExternal.min.js"></script>
 </head>
 <body>
 
